--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -15,8 +15,8 @@ menu:
 social:
 - {icon: 'github-alt', link: 'https://github.com/enzoleo'}
 - {icon: 'coffee', link: 'https://enzoleo.github.io'}
-- {icon: 'envelope', link: 'mailto:enzoliao95@gmail.com'}
-- {icon: 'map', link: 'https://www.google.com/maps/@22.6120106,114.0938314,12z'}
+- {icon: 'envelope-o', link: 'mailto:enzoliao95@gmail.com'}
+- {icon: 'map-o', link: 'https://www.google.com/maps/@22.6120106,114.0938314,12z'}
 - {icon: 'camera', link: 'https://instagram.com/enzoleo95'}
 
 # Customize site text
