--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -7,6 +7,7 @@ disqus:
 google-ID: ''
 
 menu:
+- {name: 'Resources', folder: 'resources', file: 'resources.html'}
 - {name: 'Posts', folder: 'pages', file: 'posts.html'}
 - {name: 'About', folder: 'pages', file: 'about.html'}
 - {name: 'Contact', folder: 'pages', file: 'contact.html'}
@@ -26,6 +27,6 @@ pagination:
 
 sharing_button_prompt: 'Feel free to share!'
 
-related_posts: 'You may also enjoy...'
+related_posts: 'Related Posts...'
 
 post_date_prefix: 'Written on'
