--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -15,10 +15,10 @@ menu:
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
 - {icon: 'github-alt', link: 'https://github.com/enzoleo'}
-- {icon: 'coffee', link: 'https://enzoleo.github.io'}
-- {icon: 'envelope-o', link: 'mailto:enzoliao95@gmail.com'}
-- {icon: 'map-o', link: 'https://www.google.com/maps/@22.6120106,114.0938314,12z'}
-- {icon: 'camera', link: 'https://instagram.com/enzoleo95'}
+- {icon: 'house-user', link: 'https://enzoleo.github.io'}
+- {icon: 'envelope', link: 'mailto:enzoliao95@gmail.com'}
+- {icon: 'map-marked-alt', link: 'https://www.google.com/maps/@22.6120106,114.0938314,12z'}
+- {icon: 'instagram', link: 'https://instagram.com/enzoleo95'}
 
 # Customize site text
 pagination:
